# Nondeterministic-Finite-Automaton

./: CMakeLists.txt  README.md  run.sh
lib/: CMakeLists.txt  automaton.cpp  automaton.h
src/: main.cpp
test/: main_test.cpp
